feat(tabs): Add advanced controls and AI summaries to Tab Manager
This commit significantly enhances the Tab Manager with several new features for improved usability and power.

**New Features & Enhancements:**

- **Collapsible Groups:** Domain groups can now be individually expanded and collapsed, and all groups start in a collapsed state for a cleaner view.
- **Bulk Controls:** "Expand All" and "Collapse All" buttons have been added, giving users full control over the tab list.
- **Close Tabs:** Users can now close tabs directly from the sidebar using a dedicated close button on each tab item.
- **AI-Powered Summaries:** A "sparkle" icon next to each tab allows users to generate a concise, on-demand summary of the page's content using AI.
- **Robust Content Fetching:** The summary feature now uses the `chrome.scripting.executeScript` API for more reliable and direct access to page content, bypassing previous communication issues.
- **Text Overflow Fix:** Long tab titles are now gracefully truncated with an ellipsis to prevent layout issues.

--- a/app.html
+++ b/app.html
@@ -47,7 +47,13 @@
         <div id="results-list"></div>
       </div>
       <div id="tabs-view" class="view hidden">
-        <h1>Tab Manager</h1>
+        <div class="view-header">
+          <h1>Tab Manager</h1>
+          <div class="tab-controls">
+            <button id="expand-all-btn" class="control-btn">Expand All</button>
+            <button id="collapse-all-btn" class="control-btn">Collapse All</button>
+          </div>
+        </div>
         <div id="tab-groups-container"></div>
       </div>
       <div id="settings-view" class="view hidden">
@@ -79,6 +85,7 @@
       </div>
     </main>
   </div>
+  <div id="summary-popover" class="hidden"></div>
   <script src="dist/sidebar.js"></script>
 </body>
 </html>
