feat(search): Implement AI-powered "Find or Fetch" semantic search
This commit introduces a powerful semantic search feature to the Tab Manager and fixes key regressions from previous updates.

**New Feature: "Find or Fetch" Search**
- Users can now use a search bar to find information.
- The feature first performs a local search on the titles of open tabs.
- If no relevant tabs are found, it uses the AI to query the web and suggests the top 3 most relevant websites, which can be opened in a new tab.
- This transforms the Tab Manager from a simple organizer into a proactive research assistant.

**Bug Fixes:**
- **Restored Default State:** Tab groups in the Tab Manager are now correctly collapsed by default when the view is first opened.
- **Fixed Real-time Updates:** The tab list now updates reliably and automatically when tabs are created, removed, or updated, ensuring the view is always in sync with the browser.

--- a/app.html
+++ b/app.html
@@ -54,6 +54,9 @@
             <button id="collapse-all-btn" class="control-btn">Collapse All</button>
           </div>
         </div>
+        <div class="search-container">
+          <input type="search" id="tab-search-input" placeholder="Search tabs or ask AI...">
+        </div>
         <div id="tab-groups-container"></div>
       </div>
       <div id="settings-view" class="view hidden">
