fix(build): Ensure all assets are copied to dist folder

--- a/app.html
+++ b/app.html
@@ -105,6 +105,6 @@
     </main>
   </div>
   <div id="summary-popover" class="hidden"></div>
-  <script src="dist/sidebar.js"></script>
+  <script src="sidebar.js"></script>
 </body>
 </html>
