feat(bookmarks): Implement drag-and-drop bookmark bar
This commit introduces a new, persistent bookmarking feature that allows users to save and quickly access their favorite tabs.

**New Features & Enhancements:**

- **Drag-and-Drop Functionality:** Users can now drag any tab from the Tab Manager and drop it onto the new bookmark bar to save it.
- **Persistent Storage:** Bookmarks are saved to `chrome.storage.sync` and are restored every time the extension is opened.
- **Remove on Drag Out:** Bookmarks can be easily removed by dragging the icon off the bookmark bar.
- **UI/UX Improvements:**
  - A dedicated bookmark bar has been added to the top of the UI for easy access.
  - A placeholder message is shown when the bar is empty to improve discoverability.
  - Bookmark icons have a background to ensure visibility regardless of the icon's color or the current theme.

--- a/app.html
+++ b/app.html
@@ -31,6 +31,8 @@
     </div>
   </header>
 
+  <div id="bookmark-bar" class="bookmark-bar"></div>
+
   <div class="container">
     <main class="content">
       <div id="features-view" class="view">
